--- a/piBox/templates/home.html
+++ b/piBox/templates/home.html
@@ -1,10 +1,15 @@
-<!doctype html>
-<html>
-	<head>
-		<title>piBox</title>
-	</head>
-	<body>
-		<p>Hey there! Welcome to piBox.</p>
-		<p>Sorry, we are still under construction. You can go to <a href="http://google.com">Google</a> in the meantime. :)</p>
-	</body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>piBox</title>
+</head>
+<body>
+	<p>Hey there! Welcome to piBox.</p>
+	<p>Sorry, we are still under construction. :)</p>
+
+	<ul>
+		<li><a href="browser">Browser</a></li>
+	</ul>
+</body>
 </html>
